--- a/index.html
+++ b/index.html
@@ -1,89 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Google Drive OAuth2 Example</title>
-    <script src="https://apis.google.com/js/api.js"></script>
-    <script>
-        // Google APIのクライアントIDとスコープを指定
-        const CLIENT_ID = '62279298250-kkg1u804tbkbbhpdim1vqpkutliu9ttb.apps.googleusercontent.com';
-        const API_KEY = 'AIzaSyDtkD6pLrEG89EfbDp6to5VI3LVXoP5Xpw';
-        const SCOPES = 'https://www.googleapis.com/auth/drive.readonly';
-
-        function handleClientLoad() {
-            // gapiクライアントのロード
-            gapi.load('client:auth2', initClient);
-        }
-
-        function initClient() {
-            gapi.client.init({
-                apiKey: API_KEY,
-                clientId: CLIENT_ID,
-                discoveryDocs: ['https://www.googleapis.com/discovery/v1/apis/drive/v3/rest'],
-                scope: SCOPES
-            }).then(function () {
-                // 認証ボタンが押された時に認証を行う
-                document.getElementById('authButton').onclick = handleAuthClick;
-                document.getElementById('signoutButton').onclick = handleSignoutClick;
-
-                // 認証状態の変更を監視
-                gapi.auth2.getAuthInstance().isSignedIn.listen(updateSigninStatus);
-
-                // 現在のサインイン状態を反映
-                updateSigninStatus(gapi.auth2.getAuthInstance().isSignedIn.get());
-            });
-        }
-
-        function updateSigninStatus(isSignedIn) {
-            if (isSignedIn) {
-                document.getElementById('authButton').style.display = 'none';
-                document.getElementById('signoutButton').style.display = 'block';
-                // ファイル取得ボタンを有効化
-                document.getElementById('updateButton').style.display = 'block';
-            } else {
-                document.getElementById('authButton').style.display = 'block';
-                document.getElementById('signoutButton').style.display = 'none';
-                document.getElementById('updateButton').style.display = 'none';
-            }
-        }
-
-        function handleAuthClick() {
-            gapi.auth2.getAuthInstance().signIn();
-        }
-
-        function handleSignoutClick() {
-            gapi.auth2.getAuthInstance().signOut();
-        }
-
-        function getFile(fileId) {
-            // Google Drive APIを使ってファイルを取得
-            gapi.client.drive.files.get({
-                fileId: fileId,
-                alt: 'media'
-            }).then(function(response) {
-                document.getElementById('result').textContent = response.body;
-            }, function(error) {
-                console.error('Error: ' + error.message);
-                document.getElementById('result').textContent = `エラー: ${error.message}`;
-            });
-        }
-
-        document.getElementById('updateButton').addEventListener('click', function() {
-            const fileId = document.getElementById('fileId').value;
-            getFile(fileId);
-        });
-    </script>
-</head>
-<body>
-    <h1>Google DriveからCSVファイルを取得する</h1>
-    <input type="text" id="fileId" placeholder="ファイルIDを入力" />
-    <button id="authButton">Googleにログイン</button>
-    <button id="signoutButton" style="display: none;">ログアウト</button>
-    <button id="updateButton" style="display: none;">ファイルを取得</button>
-    <pre id="result"></pre>
-
-    <script>
-        // ページロード時にGoogle APIクライアントを初期化
-        handleClientLoad();
-    </script>
-</body>
-</html>
+hello
