--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-hello
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>動画圧縮ツール</title>
+<link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+<h1>動画を10MBまで圧縮するツール</h1>
+<input type="file" id="inputVideo" accept="video/*">
+<button id="compressButton">圧縮開始</button>
+<p id="status"></p>
+<video id="outputVideo" controls></video>
+<a id="downloadLink" download="compressed.mp4" style="display: none;">圧縮された動画をダウンロード</a>
+
+<!-- ffmpeg.wasmの読み込み (CDN経由) -->
+<script src="https://unpkg.com/@ffmpeg/ffmpeg@0.10.0/dist/ffmpeg.min.js"></script>
+<script src="script.js"></script>
+</body>
+</html>
