--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>動画圧縮ツール</title>
 <link rel="stylesheet" href="style.css">
+<!-- ffmpeg.wasmの読み込み (CDN経由) -->
+<script src="ffmpeg-core.js"></script>
+<script src="https://unpkg.com/@ffmpeg/ffmpeg@0.10.0/dist/ffmpeg.min.js"></script>
+<script src="script.js" defer></script>
 </head>
 <body>
 
@@ -15,8 +19,6 @@
 <video id="outputVideo" controls></video>
 <a id="downloadLink" download="compressed.mp4" style="display: none;">圧縮された動画をダウンロード</a>
 
-<!-- ffmpeg.wasmの読み込み (CDN経由) -->
-<script src="https://unpkg.com/@ffmpeg/ffmpeg@0.10.0/dist/ffmpeg.min.js"></script>
-<script src="script.js"></script>
+
 </body>
 </html>
