--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <title>動画圧縮ツール</title>
 <link rel="stylesheet" href="style.css">
 <!-- ffmpeg.wasmの読み込み (CDN経由) -->
+<script src="coi-serviceworker.js"></script>
 <script src="ffmpeg-core.js"></script>
 <script src="https://unpkg.com/@ffmpeg/ffmpeg@0.10.0/dist/ffmpeg.min.js"></script>
 <script src="script.js" defer></script>
