--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <link rel="stylesheet" href="style.css">
 <!-- ffmpeg.wasmの読み込み (CDN経由) -->
 <script src="coi-serviceworker.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@ffmpeg/core@0.12.6/dist/esm/ffmpeg-core.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/ffmpeg/0.12.10/umd/ffmpeg.min.js" integrity="sha512-j2FJMGBh+AdPWKCKDqIzH67vu4ps8OsNZqqetz8YSlbwy2ZwFTL+p6Hp1j17nL0B7IDl9E4zhPUXZKwz7MzjQQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="ffmpeg-core.js"></script>
+<script src="ffmpeg.min.js"></script>
 <script src="script.js" defer></script>
 </head>
 <body>
