--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>“®‰æˆ³kƒc[ƒ‹</title>
+  <title>å‹•ç”»åœ§ç¸®ãƒ„ãƒ¼ãƒ«</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>“®‰æˆ³kƒc[ƒ‹ (10MBˆÈ‰º‚Éˆ³k)</h1>
+  <h1>å‹•ç”»åœ§ç¸®ãƒ„ãƒ¼ãƒ« (10MBä»¥ä¸‹ã«åœ§ç¸®)</h1>
   <input type="file" id="videoInput" accept="video/*">
-  <button id="compressButton">“®‰æ‚ðˆ³k</button>
+  <button id="compressButton">å‹•ç”»ã‚’åœ§ç¸®</button>
   <p id="status"></p>
   <video id="outputVideo" controls></video>
-  <a id="downloadLink" style="display:none;">ƒ_ƒEƒ“ƒ[ƒh</a>
+  <a id="downloadLink" style="display:none;">ãƒ€ã‚¦ãƒ³ãƒ­ãƒ¼ãƒ‰</a>
 
   <script src="script.js"></script>
 </body>
