--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
     <video id="outputVideo" controls></video>
     <a id="downloadLink" style="display:none;">ダウンロード</a>
   </div>
-  <script src="script.js"></script>
+  <script type="module" src="script.js"></script>
 </body>
 </html>
