--- a/v0/index.html
+++ b/v0/index.html
@@ -1,7 +1,7 @@
 
 <html>
 <head>
-  <script src="//cdn.jsdelivr.net/npm/@ffmpeg/ffmpeg@0.8.3/dist/ffmpeg.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@ffmpeg/ffmpeg@0.8.3/dist/ffmpeg.min.js"></script>
   <style>
     html,
     body {
