--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- COOPとCOEPの設定 -->
   <meta http-equiv="Cross-Origin-Opener-Policy" content="same-origin">
   <meta http-equiv="Cross-Origin-Embedder-Policy" content="require-corp">
-  
+  <script src="coi-serviceworker.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@ffmpeg/ffmpeg@latest/dist/ffmpeg.min.js"></script>
 </head>
 <body>
