--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>動画圧縮ツール2</title>
+  <title>Junnie's Video Compressor™</title>
   
   <!-- COOPとCOEPの設定 -->
   <meta http-equiv="Cross-Origin-Opener-Policy" content="same-origin">
@@ -12,9 +12,9 @@
   <script src="https://cdn.jsdelivr.net/npm/@ffmpeg/ffmpeg@latest/dist/ffmpeg.min.js"></script>
 </head>
 <body>
-  <h1>動画圧縮ツール</h1>
+  <h1>Junnie's Video Compressor™</h1>
 
-  <p>動画をアップロードし、圧縮された動画をダウンロードできます。</p>
+  <p>動画を低ファイルサイズに圧縮します。処理はすべてローカルで実行されます！</p>
   
   <input type="file" id="upload" accept="video/*" />
   <br><br>
