--- a/index.html
+++ b/index.html
@@ -18,16 +18,27 @@
   
   <input type="file" id="upload" accept="video/*" />
   <br><br>
+  <div id="videoInfo"></div>
+  <img id="thumbnail" style="max-width: 300px; display: none;" />
+  <br>
   <button id="compressBtn" disabled>圧縮開始</button>
   <br><br>
-  <a id="downloadLink" href="#" download="compressed_video.mp4" style="display:none">ダウンロード</a>
+  <progress id="progressBar" value="0" max="100" style="width: 100%; display: none;"></progress>
+  <br><br>
+  <div id="compressedInfo"></div>
+  <button id="downloadBtn" style="display: none;">圧縮された動画をダウンロード</button>
   
   <script>
     let ffmpeg;
 
     // ffmpeg.wasm の初期化
     async function initFFmpeg() {
-      ffmpeg = await FFmpeg.createFFmpeg({ log: true });
+      ffmpeg = await FFmpeg.createFFmpeg({ log: true, progress: (p) => {
+        const progressBar = document.getElementById('progressBar');
+        if (p.ratio) {
+          progressBar.value = Math.round(p.ratio * 100);
+        }
+      } });
       await ffmpeg.load();
     }
 
@@ -35,30 +46,71 @@
     document.getElementById('upload').addEventListener('change', (event) => {
       const file = event.target.files[0];
       if (file) {
+        displayVideoInfo(file);
         document.getElementById('compressBtn').disabled = false;
         document.getElementById('compressBtn').onclick = () => compressVideo(file);
       }
     });
 
+    // 動画情報の表示
+    function displayVideoInfo(file) {
+      const videoInfo = document.getElementById('videoInfo');
+      const thumbnail = document.getElementById('thumbnail');
+      const url = URL.createObjectURL(file);
+
+      videoInfo.innerHTML = `
+        <p>タイトル: ${file.name}</p>
+        <p>ファイルサイズ: ${(file.size / (1024 * 1024)).toFixed(2)} MB</p>
+      `;
+
+      // サムネイル表示
+      const video = document.createElement('video');
+      video.src = url;
+      video.currentTime = 1;
+      video.addEventListener('loadeddata', () => {
+        const canvas = document.createElement('canvas');
+        canvas.width = video.videoWidth;
+        canvas.height = video.videoHeight;
+        const ctx = canvas.getContext('2d');
+        ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
+        thumbnail.src = canvas.toDataURL('image/png');
+        thumbnail.style.display = 'block';
+      });
+    }
+
     // 動画圧縮処理
     async function compressVideo(file) {
-      // ファイルをffmpegに入力する
+      const progressBar = document.getElementById('progressBar');
+      progressBar.style.display = 'block';
+      progressBar.value = 0;
+
       const fileName = file.name;
       await ffmpeg.FS('writeFile', fileName, new Uint8Array(await file.arrayBuffer()));
 
       // 動画を10MB程度に圧縮するコマンド
       await ffmpeg.run('-i', fileName, '-vcodec', 'libx264', '-crf', '28', '-preset', 'fast', '-movflags', '+faststart', '-fs', '10M', 'output.mp4');
 
-      // 圧縮後のファイルをダウンロード可能にする
+      // 圧縮後のファイルサイズ取得
       const data = ffmpeg.FS('readFile', 'output.mp4');
       const videoBlob = new Blob([data.buffer], { type: 'video/mp4' });
       const url = URL.createObjectURL(videoBlob);
 
-      // ダウンロードリンクを表示
-      const downloadLink = document.getElementById('downloadLink');
-      downloadLink.href = url;
-      downloadLink.style.display = 'inline-block';
-      downloadLink.textContent = '圧縮された動画をダウンロード';
+      // 圧縮後の情報表示
+      const compressedInfo = document.getElementById('compressedInfo');
+      compressedInfo.innerHTML = `<p>圧縮後のファイルサイズ: ${(videoBlob.size / (1024 * 1024)).toFixed(2)} MB</p>`;
+
+      // ダウンロードボタンの表示と設定
+      const downloadBtn = document.getElementById('downloadBtn');
+      downloadBtn.style.display = 'inline-block';
+      downloadBtn.onclick = () => {
+        const a = document.createElement('a');
+        a.href = url;
+        a.download = 'compressed_video.mp4';
+        a.click();
+      };
+
+      // 進行度バーの非表示
+      progressBar.style.display = 'none';
     }
 
     // 初期化
