--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <div class="container">
     <h1>Junnie's Video Compressor™</h1>
-    <p class="description">動画ファイルを迅速に圧縮。すべての処理はローカル環境で行われます。</p>
+    <p class="description">動画ファイルをローカル処理によって10MB程度まで圧縮します。</p>
     
     <input type="file" id="upload" accept="video/*" class="file-input" />
     <div id="videoInfo" class="info"></div>
