final_last_verXX

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <div class="container">
     <h1>Junnie's Video Compressor™</h1>
-    <p class="description">このツールは、動画ファイルを迅速かつ簡単に圧縮するために設計されています。圧縮プロセスはすべてローカル環境で行われるため、プライバシーが保護されます。大きなファイルも問題なく処理でき、品質を維持しつつファイルサイズを削減します。特に、ファイルの共有やストレージの節約に役立ちます。</p>
+    <p class="description">動画ファイルを10MB程度に圧縮する処理をローカル環境で実行します。CPU処理なので現状かなり低速です。</p>
     
     <input type="file" id="upload" accept="video/*" class="file-input" />
     <div id="videoInfo" class="info"></div>
