--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Junnie's Video Compressor™</title>
+  <title>ローカル動画圧縮</title>
   
   <!-- COOPとCOEPの設定 -->
   <meta http-equiv="Cross-Origin-Opener-Policy" content="same-origin">
@@ -14,8 +14,8 @@
 </head>
 <body>
   <div class="container">
-    <h1>Junnie's Video Compressor™</h1>
-    <p class="description">動画ファイルを10MB程度に圧縮する処理をローカル環境で実行します。CPU処理なので現状かなり低速です。</p>
+    <h1>ローカル動画圧縮</h1>
+    <p class="description">動画ファイルを10MB程度に圧縮する処理をローカル環境で実行します。現状はCPU処理なのでかなり低速です。</p>
     
     <input type="file" id="upload" accept="video/*" class="file-input" />
     <div id="videoInfo" class="info"></div>
@@ -28,7 +28,7 @@
     <button id="downloadBtn" class="download-btn" style="display: none;">ダウンロード</button>
     
     <div id="logContainer" class="log-container">
-      <h3>ログ出力</h3>
+      <h3>出力</h3>
       <pre id="logOutput"></pre>
     </div>
   </div>
