--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ローカル動画圧縮</title>
-  
+  <!-- Open Graph メタタグ -->
+  <meta property="og:title" content="ローカル動画圧縮 v0.1-cpuonly">
+  <meta property="og:description" content="ローカル処理によって動画をファイルサイズ10MB以下に収まるよう圧縮する、ffmpeg.wasmベースのWebアプリです。">
+  <meta property="og:image" content="og-image.png">
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="ローカル動画圧縮">
   <!-- COOPとCOEPの設定 -->
   <meta http-equiv="Cross-Origin-Opener-Policy" content="same-origin">
   <meta http-equiv="Cross-Origin-Embedder-Policy" content="require-corp">
