rainbow progress bar

--- a/cpu/98/index.html
+++ b/cpu/98/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ローカル動画圧縮</title>
+  <title>ローカル動画圧縮 (v0.1-cpuonly-98)</title>
   <meta property="og:title" content="ローカル動画圧縮 (v0.1-cpuonly-98)">
   <meta property="og:description" content="ローカル処理によって動画をファイルサイズ10MB以下に収まるよう圧縮する、ffmpeg.wasmベースのWebアプリです。">
   <meta property="og:image" content="og-image.png">
@@ -20,7 +20,7 @@
 <body>
   <div class="window">
     <div class="title-bar">
-      <div class="title-bar-text">ローカル動画圧縮</div>
+      <div class="title-bar-text">ローカル動画圧縮 (v0.1-cpuonly-98)</div>
       <div class="title-bar-controls">
         <button aria-label="Minimize"></button>
         <button aria-label="Maximize"></button>
