--- a/cpu/98/index.html
+++ b/cpu/98/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ローカル動画圧縮 (v0.1-cpuonly-98)</title>
-  <meta property="og:title" content="ローカル動画圧縮 (v0.1-cpuonly-98)">
+  <title>ローカル動画圧縮</title>
+  <meta property="og:title" content="ローカル動画圧縮 (v0.1-cpuonly)">
   <meta property="og:description" content="ローカル処理によって動画をファイルサイズ10MB以下に収まるよう圧縮する、ffmpeg.wasmベースのWebアプリです。">
   <meta property="og:image" content="og-image.png">
   <meta property="og:type" content="website">
@@ -20,7 +20,7 @@
 <body>
   <div class="window">
     <div class="title-bar">
-      <div class="title-bar-text">ローカル動画圧縮 (v0.1-cpuonly-98)</div>
+      <div class="title-bar-text">ローカル動画圧縮</div>
       <div class="title-bar-controls">
         <button aria-label="Minimize"></button>
         <button aria-label="Maximize"></button>
@@ -35,7 +35,7 @@
       <img id="thumbnail" class="thumbnail">
 
       <button id="compressBtn" class="btn">圧縮開始</button>
-      <progress id="progressBar" value="0" max="100" class="progress-bar"></progress>
+      <progress id="progressBar" value="0" max="100" class="progress-bar" style="display: none;"></progress>
 
       <div id="compressedInfo" class="info"></div>
       <button id="downloadBtn" class="download-btn" style="display: none;">ダウンロード</button>
