--- a/gpu/v01/index.html
+++ b/gpu/v01/index.html
@@ -10,6 +10,7 @@
   <h1>WebCodecs APIで動画をMP4に変換</h1>
   <input type="file" id="input-video" accept="video/*">
   <button id="convert">変換開始</button>
+  <button id="download-log">ログダウンロード</button>
   <video id="preview" controls></video>
   <p id="status">ステータス: 待機中</p>
   <script src="script.js"></script>
