--- a/02/index.html
+++ b/02/index.html
@@ -45,7 +45,7 @@
         </section>
 
         <footer>
-            <p>Build Version: <span id="version"></span></p>
+            <p>Build Version: 1137</span></p>
         </footer>
     </div>
     <script src="https://unpkg.com/@ffmpeg/ffmpeg@0.11.6/dist/ffmpeg.min.js"></script>
