--- a/02/index.html
+++ b/02/index.html
@@ -60,7 +60,7 @@
     </div>
     
     <footer>
-      <p>Build Version: <span id="buildVersion"></span></p>
+      <p>Build Version: 1247</p>
     </footer>
   </div>
 
